# mango

./: .gitignore  ChangeLog  HACKING  INSTALL  MAINTAINERS  README  REQUIREMENTS  TODO  config.xml-gnome  mango.doap
docs/: FIELDS
docs/ldif/: ou.ldif
lib/: account.php  authtoken.php  ber.php  config.php  datefield.php  foundationmember.php  ftpmirror.php  ldap.php  module.php  mysql.php  page.php  paged_results.php  user.php  util.php
mango/: TODO  mango-passwd-reset-wrapper.c  mango-passwd-reset.c  models.py  settings.py  urls.py  views.py
mango/static_media/img/flash/: Makefile.am
templates/: authtoken_mail.xsl  authtoken_mail_verification.xsl  inform_accounts.xsl  maintainer_approval.xml  maintainer_approval.xsl  requestor_status_change.xsl  user_instructions.xsl  welcome_mail.xsl  welcome_mail_alias.xsl  welcome_mail_shell.xsl
www/: approval-template.txt  authenticate.xsl  common.php  common.xsl  default.css  forms.xsl  index.php  index.xsl  list_accounts.php  list_accounts.xsl  list_foundationmembers.php  list_foundationmembers.xsl  list_ftpmirrors.php  list_ftpmirrors.xsl  list_modules.php  list_modules.xsl  list_users.php  list_users.xsl  lists.xml  login.php  login.xsl  new_account.php  new_account.xsl  new_foundationmember.php  new_foundationmember.xsl  new_ftpmirror.php  new_ftpmirror.xsl  new_module.php  new_module.xsl  new_user.php  new_user.xsl  page.xsl  renewal-template.txt  update_foundationmember.php  update_foundationmember.xsl  update_ftpmirror.php  update_ftpmirror.xsl  update_module.php  update_module.xsl  update_user.php  (+3 more)
(+83 files in other folders)
