SUBDIR = 

urlpath = /img/flash

page_SCRIPTS =

page_DATA = \
	diveintognome.png \
	new_years_resolution.png \
	february-global-desktop.png \
	goodbye_phone.png \
	epatents.png \
	gimp2.png \
	two-six.png \
	official-gnome-2-developers-guide.png \
	guadec-2004.png \
	guadec-2004-end.png \
	guadec-callforpapers.png \
	gnome_tshirts.png \
	gnome28.png \
	summit_mit_2004.png \
	forum_gnome_2004.png \
	hey_kids.png \
	two-ten-folder.jpg \
	guadec_stuttgart_splash.png \
	gmt-spreadtheword2.png \
	wgosplash-gnomejournal-alt.png \
	wgosplash-gnomejournal-new.png \
	two-twelve.jpg \
	summit-mit-2005.png \
	agobanner.png \
	forum-gnome-2005.png \
	bug-hunt-wgo.png \
	power-combined.png \
	two-fourteen.png \
	summeroutreachbanner.jpg \
	two-sixteen.png \
	two-eighteen.png \
	bugday.png \
	two-eighteen-small.png \
	gmae-web-teaser.jpg \
	gmae-launch.jpg \
	guadec2007-splash.png \
	gnome10years.png \
	gnome10years.jpg \
	two-twenty.jpg \
	two-twenty-two.png \
	ghop-2007.png \
	gnome-equation.png \
	outreach-a11y.png \
	two-twenty-four.png \
	new-friends-of-gnome.png \
	two-twenty-six.png \
	two-twenty-eight.png \
	two-thirty.png \
	two-thirty-two.png \
	tshirtcontestbanner.png \
	gnome3-teaser.png

include $(top_srcdir)/rules.common
